[package]
name = "cogentlm-gateway-example"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
autobins = false

[[bin]]
name = "cogentlm-gateway-example"
path = "src/main.rs"

[features]
default = ["native"]
native = ["cogentlm/native", "cogentlm-gateway/native"]
backend-dl = ["cogentlm-gateway/backend-dl"]
cuda = ["cogentlm-gateway/cuda"]
metal = ["cogentlm-gateway/metal"]
vulkan = ["cogentlm-gateway/vulkan"]
openmp = ["cogentlm-gateway/openmp"]

[dependencies]
anyhow.workspace = true
axum = "0.8"
bytes = "1"
clap.workspace = true
cogentlm = { workspace = true, features = ["gateway", "providers"] }
cogentlm-gateway.workspace = true
futures-util = "0.3"
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "signal"] }
