[package]
name = "sipp-gateway-example"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
autobins = false

[[bin]]
name = "sipp-gateway-example"
path = "src/main.rs"

[features]
default = ["native"]
native = ["sipp/native", "sipp-gateway/native"]
backend-dl = ["sipp-gateway/backend-dl"]
cuda = ["sipp-gateway/cuda"]
metal = ["sipp-gateway/metal"]
vulkan = ["sipp-gateway/vulkan"]
openmp = ["sipp-gateway/openmp"]

[dependencies]
anyhow.workspace = true
axum = "0.8"
bytes = "1"
clap.workspace = true
sipp = { workspace = true, features = ["gateway", "providers"] }
sipp-gateway.workspace = true
futures-util = "0.3"
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "signal"] }
