[package]
name = "sipp-rust-examples"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
autobins = false

[[bin]]
name = "query"
path = "src/query.rs"

[[bin]]
name = "chat"
path = "src/chat.rs"

[[bin]]
name = "embed"
path = "src/embed.rs"

[[bin]]
name = "vision_chat"
path = "src/vision_chat.rs"

[[bin]]
name = "provider_chat"
path = "src/provider_chat.rs"

[[bin]]
name = "gateway_query"
path = "src/gateway_query.rs"
required-features = ["gateway"]

[[bin]]
name = "gateway_chat"
path = "src/gateway_chat.rs"
required-features = ["gateway"]

[[bin]]
name = "gateway_embed"
path = "src/gateway_embed.rs"
required-features = ["gateway"]

[features]
gateway = ["sipp/gateway"]
backend-dl = ["sipp/backend-dl"]
cuda = ["sipp/cuda"]
metal = ["sipp/metal"]
vulkan = ["sipp/vulkan"]
openmp = ["sipp/openmp"]

[dependencies]
sipp = { workspace = true, features = ["providers"] }
futures.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
