[package]
name = "cogentlm-gateway"
description = "Route-free gateway helpers and first-party JSON/SSE profile"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
publish = false

[features]
default = ["native", "providers"]
native = ["cogentlm/native"]
backend-dl = ["cogentlm/backend-dl"]
cuda = ["cogentlm/cuda"]
metal = ["cogentlm/metal"]
vulkan = ["cogentlm/vulkan"]
openmp = ["cogentlm/openmp"]
providers = ["cogentlm/providers"]

[dependencies]
bytes = "1"
cogentlm = { workspace = true, features = ["gateway"] }
http = "1"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
