[package]
name = "sipp-gateway"
description = "Route-free gateway helpers and first-party JSON/SSE profile"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
publish = false

[features]
default = ["providers"]
backend-dl = ["sipp/backend-dl"]
cuda = ["sipp/cuda"]
metal = ["sipp/metal"]
vulkan = ["sipp/vulkan"]
openmp = ["sipp/openmp"]
providers = ["sipp/providers"]

[dependencies]
bytes = "1"
sipp = { workspace = true, features = ["gateway"] }
http = "1"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
