[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "sipp-py-backend-cuda"
version = "0.1.0"
description = "Native CUDA backend for Sipp Python"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

[tool.maturin]
module-name = "sipp_backend_cuda._native"
manifest-path = "../../../../bindings/python/Cargo.toml"
python-source = "python"
